syntax = "proto3";

package cause.v1;

option go_package = "v1";

import "google/api/annotations.proto";

service CauseService {
	rpc CreateCause(CreateCauseRequest) returns (CreateCauseResponse) {
		option (google.api.http) ={
			post: "/v1/cause"
			body: "item"
		};
	}

	rpc GetCause(GetCauseRequest) returns (GetCauseResponse) {
		option (google.api.http) ={
			get: "/v1/cause/{id}"
		};
	}
}

message Cause {
	int64 id = 1;
	string title = 2;
}

message CreateCauseRequest {
	Cause item = 1;
}

message CreateCauseResponse {
	int64 id = 1;
	
}
message GetCauseRequest {
	int64 id = 1;
}

message GetCauseResponse {
	Cause item = 1;
}
